--- a/index.html
+++ b/index.html
@@ -4,11 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <!-- link a boostrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- link a iconos de boostrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <!-- link al CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- link al JS -->
     <script defer src="js/script.js"></script>
     <title>Adivinanza con JS</title>
 </head>
 <body>
-    <h1>Adivinanza con JavaScript</h1>
+    <header>
+        <!-- imagen con animales para las adivinanzas -->
+    </header>
+    <main>
+        <h1>Adivinanza con JavaScript</h1>
+        <section>
+            <div class="conteiner">
+                <div class="juegos">
+                    <img src="assets/image/gato01.png" class="" alt="...">
+                    <img src="assets/image/leon01.png" class="" alt="...">
+                    <img src="assets/image/perro01.png" class="" alt="...">
+                </div>
+                <div class="opciones">
+                    <p class="">Adivina que animal dice "miau"</p>
+                    <div class="opcion">
+                        <div class="letra">A</div>
+                        <div class="nombre">Gato</div>
+                    </div>
+                    <div class="opcion">
+                        <div class="letra">B</div>
+                        <div class="nombre">Leon</div>
+                    </div>
+                    <div class="opcion">
+                        <div class="letra">C</div>
+                        <div class="nombre">Perro</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        Desarrollado para PreEntrega de JavaScript
+    </footer>
 </body>
 </html>
