--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="assets/image/favicon.ico" type="image/x-icon">
     <!-- link a boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <!-- link a iconos de boostrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <!-- link a toastify -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <!-- link al CSS -->
@@ -25,11 +24,9 @@
             <h2 id="texto">Bienvenido <span id="displayedName"></span></h2>
         </div>        
     </header>
-    <main id="root">
-        
-    </main>
+    <main id="root"> </main>
     <footer>
-        Desarrollado para PreEntrega de JavaScript
+        Desarrollado para PreEntrega de JavaScript por Gustavo J.A.
     </footer>
     <!-- script a toastify -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
